fix: Inconsistent spacing between columns
Also, add support for phone dimensions

--- a/src/ComplaintCard.less
+++ b/src/ComplaintCard.less
@@ -7,62 +7,79 @@ li.card-container {
   margin-bottom: @gutter-normal;
 
   list-style-type: none;
-}
 
-.card {
+  @media @phone {
+    padding: @gutter-narrow;
+  }
+
+  .card {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
 
-  .card-left {
-    box-sizing: border-box;
-    min-width: 260px;
-    padding-right: @grid_gutter-width;
-  }
-  .card-right {    
-  }
-
-  .layout-row {
-    .spacer {
-      margin: @gutter-narrow;
+    @media @phone {
+      flex-wrap: wrap;
     }
 
-    h4 {
+    .card-left {
+      box-sizing: border-box;
+      width: 260px;
+      padding-right: @grid_gutter-width;
+
+      @media @phone {
+        width: 100%;
+        padding-right: @gutter-narrow;
+      }
+    }
+    .card-right {
+      @media @phone {
+        width: 100%;
+        padding-top: @gutter-normal;
+      }
+    }
+
+    .layout-row {
+      .spacer {
+        margin: @gutter-narrow;
+      }
+
+      h4 {
+        margin-right: @gutter-minimum;
+
+        font-size: 16px;
+      }
+    }
+
+    .layout-column {
+      h3 {
+        margin-top: 0;
+        margin-bottom: @gutter-minimum;
+
+        a {
+          border-bottom-width: 2px;
+        }
+
+        &.to-detail {
+          margin-bottom: @gutter-normal;
+        }
+      }
+
+      h4 {
+        margin-top: 0;
+        margin-bottom: @gutter-minimum;
+      }
+    }
+
+    .subitem {
       margin-right: @gutter-minimum;
 
-      font-size: 16px;
-    }
-  }
-
-  .layout-column {
-    h3 {
-      margin-top: 0;
-      margin-bottom: @gutter-minimum;
-
-      a {
-        border-bottom-width: 2px;
-      }
-
-      &.to-detail {
-        margin-bottom: @gutter-normal;
-      }
+      font-family: @webfont-demi;
     }
 
-    h4 {
-      margin-top: 0;
-      margin-bottom: @gutter-minimum;
+    em {
+      background-color: @teal-20;
+      font-family: @webfont-regular;
+      font-style: normal;
     }
-  }
-
-  .subitem {
-    margin-right: @gutter-minimum;
-
-    font-family: @webfont-demi;
-  }
-
-  em {
-    background-color: @teal-20;
-    font-family: @webfont-regular;
-    font-style: normal;
   }
 }
